--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
-*{
+body{
     width: 100%;
     height: 100vh;
     margin: 0;
     background-color: rgba(228, 208, 168);
-    color: #000;
-    font-family: 'Kanit', sans-serif;
+   
 
 }
