--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,30 @@
+ /* Start of global Styling */
 body{
     width: 100%;
     height: 100vh;
     margin: 0;
     background-color: rgba(228, 208, 168);
+    font-family: 'Kanit', sans-serif;
+font-family: 'Mukta', sans-serif;
+}
+h1,p{
+    margin: 1em auto;
+    text-align: center;
+}
+ /* End of global Styling */
+form{
+    margin: 0 auto;
+    max-width: 500px;
+    min-width: 300px;
+    width: 30vw;
+}
+/* fieldset{
+    border: none;
+    padding: 5rem 0;
+    border-bottom: 3px solid black;  
+} */
+fieldset:last-of-type{
+    border-bottom: none;
 }
 label{
     display: inline-block;
