apply some basic styling to input text area element

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
     margin: 0;
     background-color: rgba(228, 208, 168);
     font-family: 'Kanit', sans-serif;
-font-family: 'Mukta', sans-serif;
+    font-family: 'Mukta', sans-serif;
 }
 h1,p{
     margin: 1em auto;
@@ -14,9 +14,10 @@ h1,p{
  /* End of global Styling */
 form{
     margin: 0 auto;
-    max-width: 500px;
+    max-width: 600px;
     min-width: 300px;
     width: 30vw;
+    padding-bottom: 2em;
 }
 /* fieldset{
     border: none;
@@ -30,6 +31,31 @@ label{
     display: inline-block;
     margin: 0.5rem 0;
 }
+input,textarea,select{
+    width: 100%;
+    margin: 10px 0 0;
+}
+input,textarea{
+    background-color: bisque;
+    border: 1px solid rgb(87, 79, 63);
+    color: darkgreen;
+}
+.inline{
+    width: unset;
+    margin: 0 0.5em 0;
+    vertical-align: middle
+}
 textarea{
     color: aqua;
 }
+input[type="submit"]{
+    display: block;
+    width: 60%;
+    margin: 0 auto;
+}
+a{
+    text-decoration: none;
+}
+/* input[name="password"]{
+    background-color: aqua;
+} */
