--- a/css/style.css
+++ b/css/style.css
@@ -3,47 +3,56 @@ body{
     width: 100%;
     height: 100vh;
     margin: 0;
-    background-color: rgba(228, 208, 168);
+    background: linear-gradient(to top, #e89eda 0%, #32a8a2 100%);
     font-family: 'Kanit', sans-serif;
     font-family: 'Mukta', sans-serif;
 }
 h1,p{
-    margin: 1em auto;
+    margin:auto;
     text-align: center;
+   
+}
+p{
+    font-weight: 700;
 }
  /* End of global Styling */
 form{
     margin: 0 auto;
-    max-width: 600px;
-    min-width: 300px;
+    max-width: 425px;
+    text-align: center;
     width: 30vw;
-    padding-bottom: 2em;
+    margin-top: 2em;
+    background: rgba(0, 0, 0, 0.4);
 }
-/* fieldset{
+fieldset{
     border: none;
-    padding: 5rem 0;
-    border-bottom: 3px solid black;  
-} */
-fieldset:last-of-type{
-    border-bottom: none;
+    /* padding: 5rem 0; */
+    border-top:1px solid black;  ;
+    border-bottom: 1px solid black;  
 }
+/* fieldset:last-of-type{
+    border-bottom: none;
+} */
 label{
-    display: inline-block;
-    margin: 0.5rem 0;
+    /* display: inline-block; */
+    margin: 1rem 0;
 }
 input,textarea,select{
     width: 100%;
-    margin: 10px 0 0;
+    margin: 1px 0 0;
+    
 }
 input,textarea{
-    background-color: bisque;
-    border: 1px solid rgb(87, 79, 63);
-    color: darkgreen;
+    width: 100%;
+    background-color: rgba(34, 33, 31, 0.329);
+   
+    /* color: darkgreen; */
 }
-.inline{
+.inline1{
     width: unset;
     margin: 0 0.5em 0;
-    vertical-align: middle
+    vertical-align: middle;
+    
 }
 textarea{
     color: aqua;
@@ -56,6 +65,20 @@ input[type="submit"]{
 a{
     text-decoration: none;
 }
+
+
 /* input[name="password"]{
     background-color: aqua;
+} */
+
+/* input[type=text]{
+    margin-left: 2rem;
+}
+
+input[type=email]{
+    margin-left: 2rem;
+}
+
+input[type=password]{
+    margin-left: 2rem;
 } */
